--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,5 +14,12 @@
    ],
    "background": {
      "service_worker": "background.js"
-   }
+   },
+   "content_scripts": [
+      {
+        "matches": ["<all_urls>"],
+        "js": ["content.js"],
+        "run_at": "document_end"
+      }
+    ]
  }
