Add in grant and revoke permissions and simple popup :lollipop:

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,5 +21,8 @@
         "js": ["content.js"],
         "run_at": "document_end"
       }
-    ]
+    ],
+    "action": {
+      "default_popup": "popup.html"
+    }
  }
