init metamask sdk

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "@metamask/sdk": "^0.14.1"
   }
 }
