--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "@metamask/providers": "^14.0.2",
+    "web-ext": "^7.9.0"
   }
 }
