--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.6.0",
+    "sass": "^1.69.7",
+    "sass-loader": "^13.3.3",
+    "style-loader": "^3.3.3",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
