Update address case handling with ethers, update dashbord and tested working in prod API

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@metamask/providers": "^14.0.2",
     "buffer": "^6.0.3",
+    "ethers": "^5.0.0",
     "process": "^0.11.10",
     "web-ext": "^7.9.0"
   }
