--- a/package.json
+++ b/package.json
@@ -31,10 +31,15 @@
     "@metamask/providers": "^14.0.2",
     "babel-loader": "^9.1.3",
     "buffer": "^6.0.3",
+    "css-loader": "^6.9.1",
+    "css-minimizer-webpack-plugin": "^6.0.0",
     "ethers": "^5.0.0",
+    "mini-css-extract-plugin": "^2.7.7",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.70.0",
+    "sass-loader": "^14.0.0",
     "web-ext": "^7.9.0"
   }
 }
