--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/chrome": "^0.0.261",
+    "@types/lodash": "^4.17.0",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
     "copy-webpack-plugin": "^12.0.2",
@@ -32,12 +33,19 @@
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
+    "@chainsafe/libp2p-noise": "^15.0.0",
+    "@chainsafe/libp2p-yamux": "^6.0.2",
+    "@libp2p/kad-dht": "^12.0.9",
+    "@libp2p/tcp": "^9.0.16",
+    "@libp2p/websockets": "^8.0.16",
     "@metamask/providers": "^14.0.2",
     "babel-loader": "^9.1.3",
     "buffer": "^6.0.3",
     "css-loader": "^6.10.0",
     "css-minimizer-webpack-plugin": "^6.0.0",
     "ethers": "^6.11.1",
+    "libp2p": "^1.3.0",
+    "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.8.0",
     "process": "^0.11.10",
     "react": "^18.2.0",
